# compiler

./: Bash  how_to_make.txt
Puck-Tools-Release-master/: README.md  test  test2  test3  tttNEW.asm  tttNEW.spl
Puck-Tools-Release-master/example/: helloworld.spl
Puck-Virtual-Machine-master/: .gitignore  CMakeLists.txt  README.md  puck  test
Puck-Virtual-Machine-master/src/: debugger.cpp  debugger.h  endianess.cpp  endianess.h  executable.cpp  executable.h  hardwareinterrupt.h  machine.cpp  machine.h  main.cpp
aufgaben_spl/: inout.asm  inout.map  inout.spl  inoutprod.asm  inoutprod.map  inoutprod.spl  sort.spl
pa1-resources-Java/: Makefile  README  commands
pa1-resources-Java/Tests/: test00.spl
pa1-resources-Java/parse/: Scanner.java  Scanner.java~  scanner.jflex
pa2-resources-Java/: README
pa2-resources-Java/Tests/: test02.spl
pa2-resources-Java/parse/: Parser.java  Scanner.java~  parser.cup  sym.java
resources/: README  acker.asm  drawtest.asm  ttt.asm  ttt.asmclear  ttt.spl
resources/Tests/: test01.spl
resources/absyn/: Absyn.java  ArrayTy.java  Exp.java  TypeDec.java  Var.java
resources/codegen/: Codegenerator.java
resources/main/: Main.java
resources/parse/: Parser.java  Scanner.java  parser.cup  scanner.jflex  sym.java
resources/reftests/: README  compile  run  rungraph  supptest.asm  test9.out
resources/semant/: ProcedureBodyChecker.java  SemanticChecker.java  TableBuilder.java
resources/table/: ProcEntry.java  VarEntry.java
resources/varalloc/: VarAllocator.java
spl/common/: dof  inout.spl  test.spl
spl_saturn/: HOWTO
(+18 files in other folders)
